# Handbook-on-impact-eval-world-bank

./: .gitignore  README.md  pyproject.toml
Python/: random.py
R/: dd.R  iv.R  psm.R  random.R  rd.R
data/: AEJfigs.csv  dataset.xls  hh_98.csv
python_replication/: Untitled.ipynb  random_trial.py  rdd.py
python_replication/.ipynb_checkpoints/: random-checkpoint.py
