[tool.poetry]
name = "python_replication"
version = "0.1.0"
description = ""
authors = ["hp0404 <hryhorii.pavlenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.3"
scipy = "^1.5.3"
pandas = "^1.1.3"
statsmodels = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
